feat: Initialize Gemini AI within analysis function
Initializes the Google GenAI client inside the `analyzeDesignABTest` function. This ensures that `process.env.API_KEY` is accessed within the correct execution context, making the API key more secure and available when needed.

Also, the index.html file is updated to include the necessary script tag for the application to run.

--- a/index.html
+++ b/index.html
@@ -26,5 +26,7 @@
 </head>
   <body>
     <div id="root"></div>
+    <!-- 必须添加以下脚本标签，否则应用不会运行 -->
+    <script type="module" src="./index.tsx"></script>
   </body>
 </html>
